# SiteScraper

./: DBAgent.py  PageScrap.py  README.md  RestfulAPI.py  item_detailed_view_scrape.py  mainstorepage.py  product_info.json  pyproject.toml  raw_html.txt  review_pagination.py
